2009-01-09 TualatriX <tualatrix@gmail.com>

	* pulog/feed.py: Set the latest feed item to 10.

2009-01-08 TualatriX <tualatrix@gmail.com>

	* pulog/models.py, signals.py: Added the comment_count and related
	signal to Post model.
	* pulog/templates/post/title.html, comment/comment.html: Show comment
	count.

2009-01-03 TualatriX <tualatrix@gmail.com>

	* pulog/urls.py: Added the sitemap.

2009-01-02 TualatriX <tualatrix@gmail.com>

	* pulog/templates/base.html: Fixed the div error of sidebar and
	contain.

2009-01-01 TualatriX <tualatrix@gmail.com>

	* pulog/utils.py, pulog/models.py: Merged the tagging.

2008-12-31 TualatriX <tualatrix@gmail.com>

	* pulog/templates/base.html, pulog/views/post.py: Improved the
	paginator.
	* pulog/templatetags/sidebar.py: Imporved the archive_list tag.

2008-12-30 TualatriX <tualatrix@gmail.com>

	* pulog/urls.py: Fixed the page slug issus.
	* pulog/models.py: Changed the status and type back to CharField.
	* pulog/models.py: Added the is_public field to link.
	* pulog/views/post.py: Fixed the search function, only search the
	published post.

2008-11-07 TualatriX <tualatrix@gmail.com>
	
	* pulog/models.py: Added the get_admin_url method for post. 
	* pulog/views.py: Changed the view of single-post.

2008-11-03 TualatriX <tualatrix@gmail.com>

	* pulog/admin.py, models.py: Removed the relation between Media and
	Post.
	* pulog/views/utils.py, pulog/urlspy: Added the upload view and url.
	* pulog/templates/utils/upload.html: Added the upload html for common
	admin use.

2008-11-02 TualatriX <tualatrix@gmail.com>

	* pulog/templatetags/menu.py: Fixed the filter for menu(static page).
	* pulog/urls.py, pulog/models.py: Apply the permalink(Post, Category
	and Comment.

2008-10-30 TualatriX <tualatrix@gmail.com>
	
	* media/: Integrated media to pulog models.
	* dynamic_media_serve: Remove dynamic_media_serve to
	pulug.media_serve.
	* pulog/models.py, admin.py, managers.py, views: Modified form