@@ -42,8 +42,9 @@ urlpatterns = patterns('',
         (r'linebreak/', 'pulog.views.utils.break_lines'),
         (r'^sitemap.xml$', 'django.contrib.sitemaps.views.sitemap', {'sitemaps': sitemaps}),
         (r'^admin/(.*)', admin.site.root),
-        (r'^feed/(?P<url>.*)/$', 'django.contrib.syndication.views.feed', 
-            {'feed_dict': feed}),
+        (r'^feed/$', 'pulog.views.utils.redirect_feed'),
+        url(r'^feed/(?P<url>.*)/$', 'django.contrib.syndication.views.feed', 
+            {'feed_dict': feed}, name = 'feed'),
 #        (r'^templates/(?P<path>.*)$', 'django.views.static.serve',
 #            {'document_root': settings.TEMPLATE_ROOT}),
 #        (r'^static/(?P<path>.*)$', 'django.views.static.serve',
